@@ -1,19 +1,75 @@
-H1 { text-align: center; }
+BODY {
+    background-color: #dddddd
+}
+H1 {
+    text-align: center;
+}
 A.qindex {}
 A.qindexRef {}
-A.el { text-decoration: none; font-weight: bold }
-A.elRef { font-weight: bold }
-A.code { text-decoration: none; font-weight: normal; color: #4444ee }
-A.codeRef { font-weight: normal; color: #4444ee }
-A:hover { text-decoration: none; background-color: #f2f2ff }
-DL.el { margin-left: -1cm }
-DIV.fragment { width: 100%; border: none; background-color: #eeeeee }
-DIV.ah { background-color: black; font-weight: bold; color: #ffffff; margin-bottom: 3px; margin-top: 3px }
-TD.md { background-color: #f2f2ff; font-weight: bold; }
-TD.mdname1 { background-color: #f2f2ff; font-weight: bold; color: #602020; }
-TD.mdname { background-color: #f2f2ff; font-weight: bold; color: #602020; width: 600px; }
-DIV.groupHeader { margin-left: 16px; margin-top: 12px; margin-bottom: 6px; font-weight: bold }
-DIV.groupText { margin-left: 16px; font-style: italic; font-size: smaller }
+A.el {
+    text-decoration: none;
+    font-weight: bold
+}
+A.elRef {
+    font-weight: bold
+}
+A.code {
+    text-decoration: none;
+    font-weight: normal;
+    color: #4444ee
+}
+A.codeRef {
+    font-weight: normal;
+    color: #4444ee
+}
+A:hover {
+    text-decoration: none;
+    background-color: #bbbbbb
+}
+DL.el {
+    margin-left: -1cm
+}
+DIV.fragment {
+    border-style: solid;
+    border-color: black;
+    border-width: thin;
+    background-color: #d0d0d0;
+    padding-left: 5px;
+    margin-right: 5px;
+}
+DIV.ah {
+    background-color: black;
+    font-weight: bold;
+    color: #ffffff;
+    margin-bottom: 3px;
+    margin-top: 3px
+}
+TD.md {
+    background-color: #ccccbb;
+    font-weight: bold;
+}
+TD.mdname1 {
+    background-color: #ccccbb;
+    font-weight: bold; color: #702020;
+}
+TD.mdname {
+    background-color: #ccccbb;
+    font-weight: bold;
+    color: #702020;
+    width: 600px;
+}
+DIV.groupHeader {
+    margin-left: 16px;
+    margin-top: 12px;
+    margin-bottom: 6px;
+    font-weight: bold
+}
+DIV.groupText {
+    margin-left: 16px;
+    font-style: italic;
+    font-size: smaller
+}
+
 FONT.keyword       { color: #008000 }
 FONT.keywordtype   { color: #604020 }
 FONT.keywordflow   { color: #e08000 }
