@@ -5,5 +5,5 @@
     <title>$title</title>
     <link href="dox.css" rel="stylesheet" type="text/css">
   </head>
-<body bgcolor="#ffffff">
+<body>
 
