@@ -1,3 +1,8 @@
+2002-10-30  Theodore A. Roth  <troth@openavr.org>
+
+	* doc/api/dox.css: Change default html colors.
+	* doc/api/dox_html_header: Don't spec body bgcolor.
+
 2002-10-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/malloc.dox: Fix the fix.
